--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!-- Warning Section -->
     <div class="warning">
       <span class="warning-icon">⚠️</span>
-      <p>This tool is for educational purposes only. Use it at your own risk! We are not responsible for any damage or misuse.</p>
+      <p>This tool is for educational purposes only. Use it at your own risk! I am not responsible for any damage or misuse.</p>
     </div>
 
     <script>
