--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       }
     </style>
 
-    <script type="module" src="https://unpkg.com/esp-web-tools@10.1.0/dist/install-button.js"></script>
+    <script type="module" src="https://unpkg.com/esp-web-tools@10.1.0/dist/web/connect-button.js?module"></script>
   </head>
   <body>
     <div class="content">
