--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       }
     </style>
 
-    <script type="module" src="https://unpkg.com/esp-web-tools@10.1.0/dist/web/install-button.js"></script>
+    <script type="module" src="https://unpkg.com/esp-web-tools@10.1.0/dist/web/install-button.js?module"></script>
   </head>
   <body>
     <div class="content">
